--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "cror-app",
+  "name": "my-expo-app",
   "version": "1.0.0",
-  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.0",
-    "expo-file-system": "~15.2.2",
-    "expo-sharing": "~11.4.0",
+    "expo": "~54.0.21",
+    "expo-status-bar": "~1.12.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "react-native-paper": "^5.0.0"
-  }
+    "react-dom": "18.2.0",
+    "react-native": "0.75.3",
+    "react-native-web": "~0.19.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
