--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.21",
-    "expo-status-bar": "~1.12.0",
+    "expo": "54.0.0-canary-20250729-d8899ae",
+    "expo-status-bar": "~2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.75.3",
+    "react-native": "0.76.3",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
